<resources>
    <!-- GENERAL STRINGS-->
    <string name="app_name">Emasal</string>

    <!-- DRAWER STRINGS-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_information">Mi información</string>
    <string name="my_accounts">Mis cuentas</string>
    <string name="sync">Sincronizar</string>
    <string name="exit">Salir</string>
    <string name="no_user_profile">No fue posible obtener el perfil del usuario</string>
    <string name="no_user_profile_id">No fue posible obtener el id del perfil del usuario</string>

    <!-- MAIN ACTIVITY STRINGS-->
    <string name="emasal">Emasal</string>
    <string name="start_route">Iniciar ruta</string>
    <string name="connected_like_sales_person">Conectado como vendedor</string>
    <string name="connected_like_technical">Conectado como técnico</string>
    <string name="getting_your_location">Obteniendo su ubicación&#8230;</string>
    <string name="please_wait">Por favor espere&#8230;</string>

    <!-- MAP ACTIVITY STRINGS-->
    <string name="title_activity_check_in_map">Emasal</string>
    <string name="location_permission_rationale">La aplicación debe acceder a la ubicación del dispositivo para poder
    realizar tareas de check in y check out, tambien debe poder escribir en memoria externa para guardar las firmas electrónicas</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="checking_is_in_progress">Check in en progreso</string>
    <string name="no_user_location_available">No fue posible obtener la ubicación del usuario</string>
    <string name="accept">Aceptar</string>
    <string name="time">Tiempo</string>
    <string name="latitude">Latitude:</string>
    <string name="lang">Longitud:</string>
    <string name="initial_time">00:00:00</string>
    <string name="gps_disable_message">Su GPS está apago. Debe encenderlo para acceder a su ubicación actual</string>
    <string name="cancel">Cancelar</string>
    <string name="go_to_settings">Ir a la configuración</string>
    <string name="text_enable">Encender</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="connection_failed_play_services_message">Algo salió mal tratando de conectar a Google Play Services</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">We need your location</string>
    <string name="start_tracker">Start tracker</string>
    <string name="view_history_list">View History List</string>
    <string name="stop_tracker">Stop Tracker</string>
    <string name="history">Recorrido</string>
    <string name="date">Fecha</string>
    <string name="coordinates">Coordenadas:</string>
    <string name="address">Dirección:</string>
    <string name="account_name_b">Nombre del cliente:</string>
    <string name="start_time">Hora inicio:</string>
    <string name="finish_time">Hora fin:</string>
    <string name="visit_name">Nombre de la visita:</string>
    <string name="finalize_route">Finalizar ruta</string>
    <string name="distance_traveled">Kilometraje recorrido:</string>
    <string name="route_name">Nombre de ruta:</string>
    <string name="used_time">Duración ruta:</string>
    <string name="visit_number">Número de visitas:</string>
    <string name="route_complete_information">Información de ruta completada</string>
    <string name="work_order_complete">Información de orden de trabajo completada</string>
    <string name="check_in_finalize">Esta a punto de finalizar el check in, volverá a estar en ruta</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="lorem_ipsum_title">Lorem Ipsum is simply dummy text.</string>
    <string name="completed_route">Ruta completada</string>
    <string name="completed_order">Orden de trabajo completada</string>
    <string name="check_rol_explanation">Para cambiar de rol debe finalizar la ruta</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="account_name">Nombre de la cuenta</string>
    <string name="profile_name">Nombre del perfil</string>
    <string name="visit_time">Tiempo de visita:</string>
    <string name="route_time">Tiempo de viaje:</string>


    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="seller">Vendedor</string>
    <string name="search">Buscar</string>
    <string name="technical">Técnico</string>
    <string name="my_orders">Mis ordenes</string>
    <string name="candidates">Mis clientes potenciales</string>
    <string name="my_work_orders">Mis ordenes de trabajo</string>
    <string name="account_description">Descripción de la cuenta</string>
    <string name="work_order_description">Descripción de la orden de trabajo</string>
    <string name="you_should_start_the_route">Debe iniciar la ruta antes de realizar esta acción</string>
    <string name="no_address_title">Sin dirección</string>
    <string name="no_address_description">Este cliente no tiene coordenadas registradas en el sistema. Se registrarán las coordenadas de su dirección</string>
    <string name="no_address_description_leads">Este cliente potencial no tiene coordenadas registradas en el sistema. Se registrarán las coordenadas de su dirección</string>
    <string name="finalize">Finalizar</string>
    <string name="in_process">En proceso</string>
    <string name="electronic_signature">Firma electrónica</string>
    <string name="address_detail">Detalle de la dirección</string>
    <string name="select_an_address">Seleccione una dirección para continuar</string>
    <string name="no_address_to_show">No existen direcciones para mostrar</string>
    <string name="select_visit_type">Seleccione el tipo de visita</string>
    <string name="no_check_in_available">No se puede hacer Check in, ya que no se encuentra dentro del radio aprobado</string>
    <string name="getting_contact_list">Obteniendo la lista de contactos&#8230;</string>
    <string name="select_contact">Seleccione un contacto</string>
    <string name="no_contacts_available">La cuenta no posee contactos</string>
    <string name="contact_list_no_got">No fue posible obtener la lista de contactos</string>
    <string name="visit_description">Descripción de visita</string>
    <string name="visit_description_message">Describa o comente la visita realizada</string>
    <string name="text_description">Descripción</string>
    <string name="no_description_typed">Olvidó describir o comentar la visita para finalizar</string>
    <string name="no_leads_to_show">No existen clientes potenciales para mostrar</string>
    <string name="no_contacts_to_show">No existen cuentas para mostrar</string>
    <string name="no_work_orders_to_show">No existen ordenes de trabajo para mostrar</string>
    <string name="technical_main_check_fail">No fue posible verificar quien es el técnico principal de la orden de trabajo seleccionada</string>
    <string name="text_search">Digite su búsqueda</string>
    <string name="text_no_result">Sin resultados para mostrar</string>
    <string name="text_result">Resultados</string>
    <string name="text_clear">Limpiar</string>
    <string name="text_no_radius">No fue posible obtener la configuración del radio de validación</string>
    <string name="text_no_route_created">La ruta no pudo ser creada</string>
    <string name="text_no_route_finalize">La ruta no pudo ser finalizada</string>
    <string name="text_visit_overview">Resumen de visita</string>
    <string name="text_visit_time">Tiempo de visita</string>
    <string name="text_visit_type">Tipo de visita</string>
    <string name="text_visit_description">Comentarios</string>
    <string name="text_contact">Contacto visitado</string>
    <string name="text_close_route_to_finalize">Debe finalizar la ruta para cerrar sesión</string>
    <string name="text_close_session">¿Desea finalizar su sesión?</string>
    <string name="no_address_in_this_lead">No puede realizar check in debido a que este cliente potencial no tiene una dirección registrada</string>
    <string name="text_is_principal">Principal:</string>
    <string name="text_sending_route_data">Enviando datos de la ruta&#8230;</string>
    <string name="text_route_data_sent">Datos de la ruta enviados con exito</string>
    <string name="text_route_no_saved">La ruta no pudo ser almacenada</string>
    <string name="text_work_order_status_no_updated">El status de la orden de trabajo no pudo ser actualizado</string>
    <string name="text_work_order_updating_status">Actualizando el status de la orden de trabajo&#8230;</string>
    <string name="sing_no_saved">No se pudo guardar su firma</string>
    <string name="no_contacts">Usted no posee contactos para realizar check in</string>
    <string name="phone">Teléfono:</string>


    <string-array name="visit_type">
        <item>Seguimiento</item>
        <item>Prospecto</item>
        <item>Cobro</item>
        <item>Mensajería</item>
        <item>Entrega</item>
        <item>Oficina</item>
        <item>Transporte</item>
        <item>Demostración</item>
    </string-array>
</resources>
