<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_information"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/my_information" />
        <item
            android:id="@+id/nav_my_accounts"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/my_accounts" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_menu_sync"
            android:title="@string/sync" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit_to_app"
            android:title="@string/exit" />
    </group>

</menu>
