<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:text="@string/route_complete_information"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_traveled"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tool:text="10.00 km"
            android:text="@string/distance_traveled"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/used_time"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tool:text="1:00:00"
            android:text="@string/distance_traveled"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_number"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_visit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            tool:text="3"
            android:text="@string/distance_traveled"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_height="1px"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="match_parent"/>

</LinearLayout>