<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.checkinmap.CheckInMapActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.app.checkinmap.CheckInMapActivity" />

    <LinearLayout
        android:id="@+id/linear_layout_controls"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:minHeight="50dp"
        android:padding="10dp"
        android:background="@color/colorBlackTransparent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/check_in"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="left"
                android:text="@string/latitude"/>

            <TextView
                android:id="@+id/text_view_check_in_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="right"
                tools:text="12.002556"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="left"
                android:text="@string/lang"/>

            <TextView
                android:id="@+id/text_view_check_in_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="right"
                tools:text="12.002556"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/check_out"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="left"
                android:text="@string/latitude"/>

            <TextView
                android:id="@+id/text_view_check_out_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="right"
                tools:text="12.002556"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="left"
                android:text="@string/lang"/>

            <TextView
                android:id="@+id/text_view_check_out_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="right"
                tools:text="12.002556"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/time"/>

            <Chronometer
                android:id="@+id/chronometer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/initial_time"/>

            <Button
                android:id="@+id/button_check"
                android:layout_width="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="Check in"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
    </FrameLayout>
